--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ sha2 = "0.6.0"
 hostname = "0.1.3"
 libc = "0.2"
 rand = "0.3"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+url = "1.5"
