Use new mockstream release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,4 @@ native-tls = "0.1.4"
 fnv = "1.0.3"
 
 [dev-dependencies]
-# mockstream = "0.0.2"
-# waiting on new release
-mockstream = { git = "https://github.com/lazy-bitfield/rust-mockstream" }
+mockstream = "0.0.3"
