--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "faktory"
-version = "0.8.0"
+version = "0.8.1"
 
 description = "API bindings for the language-agnostic Faktory work server"
 readme = "README.md"
@@ -19,6 +19,10 @@ license = "MIT/Apache-2.0"
 [badges]
 travis-ci = { repository = "jonhoo/faktory-rs" }
 
+[features]
+default = []
+tls = ["native-tls"]
+
 [dependencies]
 serde_json = "1.0"
 serde_derive = "1.0"
@@ -32,6 +36,7 @@ chrono = { version = "0.4", features = ["serde"] }
 url = "1.5"
 atomic-option = "0.1"
 fnv = "1.0.3"
+native-tls = { version = "0.1.4", optional = true }
 
 [dev-dependencies]
 mockstream = "0.0.3"
