--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ travis-ci = { repository = "jonhoo/faktory-rs" }
 [features]
 default = []
 tls = ["native-tls"]
+binaries = ["clap"]
 
 [dependencies]
 serde_json = "1.0"
@@ -37,6 +38,12 @@ url = "1.5"
 atomic-option = "0.1"
 fnv = "1.0.3"
 native-tls = { version = "0.1.4", optional = true }
+clap = { version = "2.27.1", optional = true }
 
 [dev-dependencies]
 mockstream = "0.0.3"
+
+[[bin]]
+name = "loadtest"
+path = "src/bin/loadtest.rs"
+required-features = ["binaries"]
