Tweaks to code coverage
See xd009642/tarpaulin#62

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: rust
+sudo: false
 dist: trusty
 addons:
     apt:
@@ -16,9 +17,12 @@ script:
   - cargo build --verbose
   - cargo test --verbose
   - cargo test --verbose --features tls
+env:
+  global:
+  - RUSTFLAGS="-C link-dead-code"
 after_success: |
   if [[ "$TRAVIS_RUST_VERSION" == stable ]]; then
     bash <(curl https://raw.githubusercontent.com/xd009642/tarpaulin/master/travis-install.sh)
-    cargo tarpaulin --out Xml
+    cargo tarpaulin --out Xml --features binaries
     bash <(curl -s https://codecov.io/bash)
   fi
