Need to forward signals
See
https://github.com/xd009642/tarpaulin/issues/62#issuecomment-343770104

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ env:
 after_success: |
   if [[ "$TRAVIS_RUST_VERSION" == stable ]]; then
     bash <(curl https://raw.githubusercontent.com/xd009642/tarpaulin/master/travis-install.sh)
-    cargo tarpaulin --out Xml --features binaries
+    cargo tarpaulin --out Xml --features binaries --forward
     bash <(curl -s https://codecov.io/bash)
   fi
