--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "faktory"
-version = "0.8.8"
+version = "0.9.0"
 
 description = "API bindings for the language-agnostic Faktory work server"
 readme = "README.md"
@@ -39,6 +39,7 @@ chrono = { version = "0.4", features = ["serde"] }
 url = "1.5"
 atomic-option = "0.1"
 fnv = "1.0.3"
+failure = "0.1"
 native-tls = { version = "0.1.4", optional = true }
 clap = { version = "2.27.1", optional = true }
 
