--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "faktory"
 version = "0.10.5"
+edition = "2018"
 
 description = "API bindings for the language-agnostic Faktory work server"
 readme = "README.md"
