--- a/appveyor.yml
+++ b/appveyor.yml
@@ -64,6 +64,5 @@ install:
 build: false
 
 test_script:
-  - cargo build --verbose
-  - cargo test --verbose
-  - cargo test --verbose --features tls
+  - cargo check --verbose
+  - cargo check --verbose --features tls
