--- a/.github/workflows/minimal.yml
+++ b/.github/workflows/minimal.yml
@@ -29,8 +29,8 @@ jobs:
         with:
           command: test
           args: --all-features --all-targets
-          env: # set this explicitly so integration tests will run
-            FAKTORY_URL: tcp://faktory:7419
+        env: # set this explicitly so integration tests will run
+          FAKTORY_URL: tcp://127.0.0.1:7419
     services:
       faktory:
         image: contribsys/faktory:latest
