--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,14 @@ jobs:
         with:
           command: test
           args: --locked --all-features --all-targets
+        env: # set this explicitly so integration tests will run
+          FAKTORY_URL: tcp://127.0.0.1:7419
+    services:
+      faktory:
+        image: contribsys/faktory:latest
+        ports:
+          - 7419:7419
+          - 7420:7420
   minimal:
     runs-on: ubuntu-latest
     name: ubuntu / stable / minimal-versions
@@ -59,6 +67,14 @@ jobs:
         with:
           command: test
           args: --locked --all-features --all-targets
+        env: # set this explicitly so integration tests will run
+          FAKTORY_URL: tcp://127.0.0.1:7419
+    services:
+      faktory:
+        image: contribsys/faktory:latest
+        ports:
+          - 7419:7419
+          - 7420:7420
   os-check:
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.os }} / stable
@@ -80,7 +96,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: generate-lockfile
-      - name: cargo test
+      - name: cargo test (w/o integrations)
         uses: actions-rs/cargo@v1
         with:
           command: test
@@ -107,7 +123,15 @@ jobs:
           command: generate-lockfile
       - name: cargo llvm-cov
         run: cargo llvm-cov --locked --all-features --lcov --output-path lcov.info
+        env: # set this explicitly so integration tests will run
+          FAKTORY_URL: tcp://127.0.0.1:7419
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v2
         with:
           fail_ci_if_error: true
+    services:
+      faktory:
+        image: contribsys/faktory:latest
+        ports:
+          - 7419:7419
+          - 7420:7420
