--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -30,6 +30,14 @@ jobs:
         with:
           command: test
           args: --locked --all-features --all-targets
+        env: # set this explicitly so integration tests will run
+          FAKTORY_URL: tcp://127.0.0.1:7419
+    services:
+      faktory:
+        image: contribsys/faktory:latest
+        ports:
+          - 7419:7419
+          - 7420:7420
   # https://twitter.com/alcuadrado/status/1571291687837732873
   update:
     runs-on: ubuntu-latest
@@ -61,4 +69,12 @@ jobs:
           command: test
           args: --locked --all-features --all-targets
         env:
+          # set this explicitly so integration tests will run
+          FAKTORY_URL: tcp://127.0.0.1:7419
           RUSTFLAGS: -D deprecated
+    services:
+      faktory:
+        image: contribsys/faktory:latest
+        ports:
+          - 7419:7419
+          - 7420:7420
