--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,15 @@ sha2 = "0.10.0"
 hostname = "0.3"
 libc = "0.2"
 rand = "0.8"
-chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
+chrono = { version = "0.4", features = [
+  "serde",
+  "clock",
+], default-features = false }
 url = "2"
 atomic-option = "0.1"
 fnv = "1.0.5"
 native-tls = { version = "0.2", optional = true }
-clap = { version = "3.1.0", optional = true }
+clap = { version = "4.3.19", optional = true }
 thiserror = "1.0.30"
 
 [dev-dependencies]
