--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ fnv = "1.0.5"
 native-tls = { version = "0.2", optional = true }
 clap = { version = "3.1.0", optional = true }
 thiserror = "1.0.30"
+derive_builder = "0.12.0"
 
 [dev-dependencies]
 mockstream = "0.0.3"
