--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["api-bindings", "asynchronous", "network-programming"]
 
 [features]
 default = []
-tls = ["native-tls"]
+tls = ["native-tls", "openssl"]
 binaries = ["clap"]
 
 [dependencies]
@@ -31,6 +31,7 @@ url = "2"
 atomic-option = "0.1"
 fnv = "1.0.5"
 native-tls = { version = "0.2", optional = true }
+openssl = { version = "0.10.61", optional = true }
 clap = { version = "4.4.10", optional = true }
 thiserror = "1.0.30"
 
