--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,10 @@ derive_builder = "0.12.0"
 [dev-dependencies]
 mockstream = "0.0.3"
 
+# to make -Zminimal-versions work
+[target.'cfg(any())'.dependencies]
+openssl = { version = "0.10.60", optional = true }
+
 [[bin]]
 name = "loadtest"
 path = "src/bin/loadtest.rs"
