Mark 'tls' and 'ent' functionality with doc cfg attr

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,7 @@ openssl = { version = "0.10.60", optional = true }
 name = "loadtest"
 path = "src/bin/loadtest.rs"
 required-features = ["binaries"]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
