--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ native-tls = { version = "0.2", optional = true }
 clap = { version = "4.4.10", optional = true }
 thiserror = "1.0.30"
 derive_builder = "0.12.0"
-tokio = { version = "1.35.1", features = ["io-util", "net"] }
+tokio = { version = "1.35.1", features = ["io-util", "net", "time"] }
 async-trait = "0.1.77"
 
 [dev-dependencies]
