Add 'exclude` field to package section of Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ repository = "https://github.com/jonhoo/faktory-rs.git"
 keywords = ["faktory", "api-bindings", "work-server", "job-server"]
 categories = ["api-bindings", "asynchronous", "network-programming"]
 
+exclude = [".github", "docker", ".gitignore", "Makefile"]
+
 [features]
 default = []
 tls = ["native-tls"]
