--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -1,11 +1,19 @@
+# Since `dependabot` does not yet support `compose` files,
+# we are using "proxy" dockerfiles, as per instructions:
+# https://github.com/dependabot/dependabot-core/issues/390#issuecomment-1062170379
+
 services:
   faktory:
-    image: contribsys/faktory:latest
+    build:
+      context: .
+      dockerfile: faktory.Dockerfile
     command: "/faktory -b :7419 -w :7420"
   nginx:
     depends_on:
       - faktory
-    image: nginx:1.25-alpine
+    build:
+      context: .
+      dockerfile: nginx.Dockerfile
     ports:
       - "127.0.0.1:7419:7419"
       - "127.0.0.1:7420:7420"
