--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["api-bindings", "asynchronous", "network-programming"]
 
 [features]
 default = []
-tls = ["native-tls"]
+tls = ["tokio-rustls", "pin-project"]
 binaries = ["clap"]
 ent = []
 
@@ -32,8 +32,6 @@ chrono = { version = "0.4", features = [
 ], default-features = false }
 url = "2"
 fnv = "1.0.5"
-native-tls = { version = "0.2", optional = true }
-clap = { version = "4.4.10", optional = true }
 thiserror = "1.0.30"
 derive_builder = "0.12.0"
 tokio = { version = "1.35.1", features = [
@@ -45,26 +43,20 @@ tokio = { version = "1.35.1", features = [
     "rt-multi-thread",
 ] }
 async-trait = "0.1.77"
-tokio-rustls = "0.25.0"
-pin-project = "1.1.4"
+
+tokio-rustls = { version = "0.25.0", optional = true }
+pin-project = { version = "1.1.4", optional = true }
+
+clap = { version = "4.4.10", optional = true }
 
 [dev-dependencies]
 mockstream = "0.0.3"
 tokio = { version = "1.35.1", features = ["rt", "macros"] }
 tokio-test = "0.4.3"
 
-# to make -Zminimal-versions work
-[target.'cfg(any())'.dependencies]
-openssl = { version = "0.10.60", optional = true }
-
 [[bin]]
 name = "loadtest"
 path = "src/bin/loadtest.rs"
-required-features = ["binaries"]
-
-[[bin]]
-name = "async_loadtest"
-path = "src/bin/async_loadtest.rs"
 required-features = ["binaries"]
 
 [package.metadata.docs.rs]
