--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ pin-project = { version = "1.1.4", optional = true }
 clap = { version = "4.4.10", optional = true }
 
 [dev-dependencies]
-mockstream = "0.0.3"
+pin-project = "1.1.4"
 tokio = { version = "1.35.1", features = ["rt", "macros"] }
 tokio-test = "0.4.3"
 
