--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,33 +15,42 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 
 [features]
 default = []
-tls = ["native-tls"]
+tls = ["tokio-rustls", "pin-project"]
 binaries = ["clap"]
 ent = []
 
 [dependencies]
-bufstream = "0.1"
-chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
+async-trait = "0.1.77"
 clap = { version = "4.4.10", optional = true }
-derive_builder = "0.20.0"
+chrono = { version = "0.4", features = [
+    "serde",
+    "clock",
+], default-features = false }
+derive_builder = "0.12.0"
 fnv = "1.0.5"
 hostname = "0.3"
 libc = "0.2"
-native-tls = { version = "0.2", optional = true }
+pin-project = { version = "1.1.4", optional = true }
 rand = "0.8"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 sha2 = "0.10.0"
 thiserror = "1.0.30"
+tokio = { version = "1.35.1", features = [
+    "io-util",
+    "net",
+    "rt",
+    "time",
+    "macros",
+    "rt-multi-thread",
+] }
+tokio-rustls = { version = "0.25.0", optional = true }
 url = "2"
 
 [dev-dependencies]
-mockstream = "0.0.3"
-
-# to make -Zminimal-versions work
-[target.'cfg(any())'.dependencies]
-openssl = { version = "0.10.60", optional = true }
+tokio = { version = "1.35.1", features = ["rt", "macros"] }
+tokio-test = "0.4.3"
 
 [[bin]]
 name = "loadtest"
