Make minimal versions pass again

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,12 @@ tokio = { version = "1.35.1", features = ["rt", "macros"] }
 tokio-test = "0.4.3"
 x509-parser = "0.15.1"
 
+# to make -Zminimal-versions work
+[target.'cfg(test)'.dependencies]
+rustls = "0.22.1"
+num-bigint = "0.4.2"
+oid-registry = "0.6.1"
+
 [[bin]]
 name = "loadtest"
 path = "src/bin/loadtest.rs"
