Revert "Comment out Openssl installation on windows in CI"
This reverts commit 7ab8ab30f8dbcc5a093cf8aea908b37cda79e500.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -110,10 +110,10 @@ jobs:
         os: [macos-latest, windows-latest]
     steps:
       # if your project needs OpenSSL, uncomment this to fix Windows builds.
-      # - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
-      #   if: runner.os == 'Windows'
-      # - run: vcpkg install openssl:x64-windows-static-md
-      #   if: runner.os == 'Windows'
+      - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
+        if: runner.os == 'Windows'
+      - run: vcpkg install openssl:x64-windows-static-md
+        if: runner.os == 'Windows'
       - uses: actions/checkout@v4
         with:
           submodules: true
