--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ x509-parser = "0.15.1"
 rustls = "0.22.1"
 num-bigint = "0.4.2"
 oid-registry = "0.6.1"
+chrono = "0.4.32"
 
 [[bin]]
 name = "loadtest"
