--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,14 +41,17 @@ tokio = { version = "1.35.1", features = [
     "net",
     "time",
     "macros",
+    "signal",
     "rt-multi-thread",
 ] }
 tokio-rustls = { version = "0.25.0", optional = true }
+tracing = "0.1"
 url = "2"
 
 [dev-dependencies]
 tokio = { version = "1.35.1", features = ["rt", "macros"] }
 tokio-test = "0.4.3"
+tracing-subscriber = "0.3.18"
 x509-parser = "0.15.1"
 
 # to make -Zminimal-versions work
