--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,15 +40,19 @@ tokio = { version = "1.35.1", features = [
     "io-util",
     "net",
     "rt",
+    "time",
+    "signal",
     "rt-multi-thread",
     "time",
 ] }
 tokio-native-tls = { version = "0.3.1", optional = true }
+tracing = "0.1"
 url = "2"
 
 [dev-dependencies]
 tokio = { version = "1.35.1", features = ["rt", "macros"] }
 tokio-test = "0.4.3"
+tracing-subscriber = "0.3.18"
 x509-parser = "0.15.1"
 
 # to make -Zminimal-versions work
