--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ thiserror = "1.0.30"
 tokio = { version = "1.35.1", features = [
     "io-util",
     "net",
+    "sync",
     "time",
     "macros",
     "signal",
