--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 
 [features]
 default = []
-tls = ["dep:tokio-rustls", "tokio/net", "tokio/io-util", "dep:pin-project"]
+tls = ["dep:tokio-native-tls", "dep:pin-project"]
 binaries = ["clap"]
 ent = []
 
@@ -37,12 +37,15 @@ serde_json = "1.0"
 sha2 = "0.10.0"
 thiserror = "1.0.30"
 tokio = { version = "1.35.1", features = [
-    "rt",
-    "time",
+    "io-util",
     "macros",
+    "net",
+    "rt",
     "rt-multi-thread",
+    "time",
+
 ] }
-tokio-rustls = { version = "0.25.0", optional = true }
+tokio-native-tls = { version = "0.3.1", optional = true }
 url = "2"
 
 [dev-dependencies]
