--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 [features]
 default = []
 tls = ["dep:tokio-native-tls", "dep:pin-project"]
-binaries = ["clap"]
+binaries = ["dep:clap", "tokio/macros"]
 ent = []
 
 [dependencies]
@@ -38,12 +38,10 @@ sha2 = "0.10.0"
 thiserror = "1.0.30"
 tokio = { version = "1.35.1", features = [
     "io-util",
-    "macros",
     "net",
     "rt",
     "rt-multi-thread",
     "time",
-
 ] }
 tokio-native-tls = { version = "0.3.1", optional = true }
 url = "2"
