--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,8 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 
 [features]
 default = []
-tls = ["dep:pin-project"]
-openssl = ["tls", "dep:tokio-native-tls"]
-rustls = ["tls", "dep:tokio-rustls"]
+native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
+rustls = ["dep:pin-project", "dep:tokio-rustls"]
 binaries = ["dep:clap", "tokio/macros"]
 ent = []
 
@@ -56,7 +55,7 @@ x509-parser = "0.15.1"
 
 # to make -Zminimal-versions work
 [target.'cfg(any())'.dependencies]
-openssl-crate = { package = "openssl", version = "0.10.60", optional = true }
+openssl = { version = "0.10.60", optional = true }
 native-tls = { version = "0.2.4", optional = true }
 num-bigint = "0.4.2"
 oid-registry = "0.6.1"
