Support both openssl and rustls. Min versions fix

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,11 +55,12 @@ x509-parser = "0.15.1"
 
 # to make -Zminimal-versions work
 [target.'cfg(any())'.dependencies]
-openssl = { version = "0.10.60", optional = true }
+chrono = "0.4.32"
 native-tls = { version = "0.2.4", optional = true }
 num-bigint = "0.4.2"
 oid-registry = "0.6.1"
-chrono = "0.4.32"
+openssl = { version = "0.10.60", optional = true }
+rustls = "0.22.1"
 
 [[bin]]
 name = "loadtest"
