--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,10 @@ native-tls = { version = "0.2.4", optional = true }
 num-bigint = "0.4.2"
 oid-registry = "0.6.1"
 openssl = { version = "0.10.60", optional = true }
-rustls = "0.22.1"
+
+# TryFrom<String> for ServerName<'static> has been implemented:
+# https://github.com/rustls/pki-types/compare/rustls:3793627...rustls:1303efa#
+rustls-pki-types = { version = "1.0.1", optional = true }
 
 # Lockstep between `serde` and `serde_derive` was introduced with the "pinned" release:
 # https://github.com/serde-rs/serde/compare/v1.0.185...v1.0.186#diff-2843fc1320fa24a059f5ca967ee45d116110116263a8ba311a3aca3793c562f0R34-R41
