--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ tokio-rustls = { version = "0.25.0", optional = true }
 url = "2"
 
 [dev-dependencies]
+rustls-pki-types = "1.0.1"
 tokio = { version = "1.35.1", features = ["rt", "macros"] }
 tokio-test = "0.4.3"
 x509-parser = "0.15.1"
