--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,6 @@ tokio = { version = "1.35.1", features = [
     "macros",
     "net",
     "rt",
-    "sync",
     "time",
     "signal",
     "rt-multi-thread",
@@ -52,6 +51,7 @@ tokio-native-tls = { version = "0.3.1", optional = true }
 tokio-rustls = { version = "0.25.0", optional = true }
 tracing = "0.1"
 url = "2"
+tokio-util = "0.7.11"
 
 [dev-dependencies]
 rustls-pki-types = "1.0.1"
