--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 [features]
 default = []
 native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
-rustls = ["dep:pin-project", "dep:tokio-rustls"]
+rustls = ["dep:pin-project", "dep:tokio-rustls", "dep:rustls-pki-types"]
 binaries = ["dep:clap", "tokio/macros"]
 ent = []
 
@@ -48,6 +48,8 @@ tokio-native-tls = { version = "0.3.1", optional = true }
 tokio-rustls = { version = "0.25.0", optional = true }
 url = "2"
 semver = { version = "1.0.23", features = ["serde"] }
+rustls-native-certs = "0.7.1"
+rustls-pki-types = { version = "1.0.1", optional = true }
 
 [dev-dependencies]
 rustls-pki-types = "1.0.1"
