--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,12 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 [features]
 default = []
 native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
-rustls = ["dep:pin-project", "dep:tokio-rustls", "dep:rustls-pki-types"]
+rustls = [
+    "dep:pin-project",
+    "dep:tokio-rustls",
+    "dep:rustls-pki-types",
+    "dep:rustls-native-certs",
+]
 binaries = ["dep:clap", "tokio/macros"]
 ent = []
 
@@ -48,7 +53,7 @@ tokio-native-tls = { version = "0.3.1", optional = true }
 tokio-rustls = { version = "0.25.0", optional = true }
 url = "2"
 semver = { version = "1.0.23", features = ["serde"] }
-rustls-native-certs = "0.7.1"
+rustls-native-certs = { version = "0.7.1", optional = true }
 rustls-pki-types = { version = "1.0.1", optional = true }
 
 [dev-dependencies]
