--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ tokio = { version = "1.35.1", features = [
 ] }
 tokio-native-tls = { version = "0.3.1", optional = true }
 tokio-rustls = { version = "0.25.0", optional = true }
+tracing = "0.1"
 url = "2"
 semver = { version = "1.0.23", features = ["serde"] }
 
@@ -53,6 +54,7 @@ semver = { version = "1.0.23", features = ["serde"] }
 rustls-pki-types = "1.0.1"
 tokio = { version = "1.35.1", features = ["rt", "macros"] }
 tokio-test = "0.4.3"
+tracing-subscriber = "0.3.18"
 x509-parser = "0.15.1"
 
 # to make -Zminimal-versions work
