--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ tokio-rustls = { version = "0.25.0", optional = true }
 tracing = "0.1"
 url = "2"
 semver = { version = "1.0.23", features = ["serde"] }
+futures = "0.3.30"
 
 [dev-dependencies]
 rustls-pki-types = "1.0.1"
