--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,11 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 [features]
 default = []
 native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
-rustls = ["dep:pin-project", "dep:tokio-rustls"]
+rustls = [
+    "dep:pin-project",
+    "dep:tokio-rustls",
+    "dep:rustls-native-certs",
+]
 binaries = ["dep:clap", "tokio/macros"]
 ent = []
 
@@ -47,6 +51,7 @@ tokio = { version = "1.35.1", features = [
 ] }
 tokio-native-tls = { version = "0.3.1", optional = true }
 tokio-rustls = { version = "0.25.0", optional = true }
+rustls-native-certs = { version = "0.7.1", optional = true }
 tracing = "0.1"
 url = "2"
 semver = { version = "1.0.23", features = ["serde"] }
