--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,24 +16,20 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 [features]
 default = []
 native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
-rustls = [
-    "dep:pin-project",
-    "dep:tokio-rustls",
-    "dep:rustls-native-certs",
-]
+rustls = ["dep:pin-project", "dep:tokio-rustls", "dep:rustls-platform-verifier"]
 binaries = ["dep:clap", "tokio/macros"]
 ent = []
 
 [dependencies]
 async-trait = "0.1.77"
 clap = { version = "4.4.10", optional = true }
-chrono = { version = "0.4", features = [
+chrono = { version = "0.4.20", features = [
     "serde",
     "clock",
 ], default-features = false }
 derive_builder = "0.12.0"
 fnv = "1.0.5"
-hostname = "0.3"
+hostname = "0.4"
 pin-project = { version = "1.1.4", optional = true }
 rand = "0.8"
 serde = "1.0"
@@ -50,8 +46,8 @@ tokio = { version = "1.35.1", features = [
     "time",            # anables `tokio::time` namespace holding the `sleep` utility and `Duraction` struct
 ] }
 tokio-native-tls = { version = "0.3.1", optional = true }
-tokio-rustls = { version = "0.25.0", optional = true }
-rustls-native-certs = { version = "0.7.1", optional = true }
+tokio-rustls = { version = "0.26", optional = true }
+rustls-platform-verifier = {version = "0.4", optional = true }
 tracing = "0.1"
 url = "2"
 semver = { version = "1.0.23", features = ["serde"] }
@@ -62,7 +58,7 @@ tokio = { version = "1.35.1", features = ["rt", "macros"] }
 tokio-test = "0.4.3"
 tokio-util = "0.7.11"
 tracing-subscriber = "0.3.18"
-x509-parser = "0.15.1"
+x509-parser = "0.16"
 
 # to make -Zminimal-versions work
 [target.'cfg(any())'.dependencies]
