--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "faktory"
-version = "0.13.1"
+version = "0.14.0-rc.1"
 authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -16,7 +16,7 @@ exclude = [".github", "docker", ".gitignore", "Makefile"]
 [features]
 default = []
 native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
-rustls = ["dep:pin-project", "dep:tokio-rustls", "dep:rustls-native-certs"]
+rustls = ["dep:pin-project", "dep:tokio-rustls", "dep:rustls-platform-verifier"]
 binaries = ["dep:clap", "tokio/macros"]
 ent = []
 
@@ -27,16 +27,16 @@ chrono = { version = "0.4", features = [
     "serde",
     "clock",
 ], default-features = false }
-derive_builder = "0.12.0"
+derive_builder = "0.20"
 fnv = "1.0.5"
-hostname = "0.3"
+hostname = "0.4"
 pin-project = { version = "1.1.4", optional = true }
-rand = "0.8"
+rand = "0.9"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 sha2 = "0.10.0"
-thiserror = "1.0.30"
+thiserror = "2.0"
 tokio = { version = "1.35.1", features = [
     "sync",            # gives us an asynchronous `Mutex`
     "io-util",         # enables `AsyncWriteExt`, `AsyncReadExt`, and `AsyncBufReadExt` in `tokio::io` namespace
@@ -46,8 +46,8 @@ tokio = { version = "1.35.1", features = [
     "time",            # anables `tokio::time` namespace holding the `sleep` utility and `Duraction` struct
 ] }
 tokio-native-tls = { version = "0.3.1", optional = true }
-tokio-rustls = { version = "0.25.0", optional = true }
-rustls-native-certs = { version = "0.7.1", optional = true }
+tokio-rustls = { version = "0.26", default-features = false, optional = true }
+rustls-platform-verifier = { version = "0.6", optional = true }
 tracing = "0.1"
 url = "2"
 semver = { version = "1.0.23", features = ["serde"] }
@@ -59,7 +59,7 @@ tokio = { version = "1.35.1", features = ["rt", "macros"] }
 tokio-test = "0.4.3"
 tokio-util = "0.7.11"
 tracing-subscriber = "0.3.18"
-x509-parser = "0.15.1"
+x509-parser = "0.17"
 
 # to make -Zminimal-versions work
 [target.'cfg(any())'.dependencies]
@@ -68,6 +68,11 @@ num-bigint = "0.4.2"
 oid-registry = "0.6.1"
 openssl = { version = "0.10.60", optional = true }
 serde_repr = { version = "0.1.5", optional = true }
+
+# inference error on crate `time` caused by an API change in Rust 1.80.0
+# https://github.com/time-rs/time/pull/671
+# https://github.com/rust-lang/rust/issues/128242
+time = { version = "0.3.35" }
 
 # TryFrom<String> for ServerName<'static> has been implemented:
 # https://github.com/rustls/pki-types/compare/rustls:3793627...rustls:1303efa#
