--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ url = "2"
 semver = { version = "1.0.23", features = ["serde"] }
 
 [dev-dependencies]
+dockerfile-parser = "0.9.0"
 rustls-pki-types = "1.0.1"
 testcontainers = { version = "0.24.0", features = ["reusable-containers"] }
 tokio = { version = "1.35.1", features = ["rt", "macros"] }
