Run docker commands directly on CI in scheduled workflow

--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -8,7 +8,7 @@ on:
     branches: [main]
   pull_request:
   schedule:
-    - cron:  '7 7 * * *'
+    - cron: "7 7 * * *"
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
@@ -28,7 +28,9 @@ jobs:
         if: hashFiles('Cargo.lock') == ''
         run: cargo generate-lockfile
       - name: Launch Faktory server
-        run: make faktory
+        run: |
+          v=$(awk '/FROM contribsys\/faktory/ {print $2}' docker/faktory.Dockerfile | awk -F ':' 'NR==1{print $2}')
+          docker run -d -p 127.0.0.1:7419:7419 contribsys/faktory:${v} /faktory -b :7419
       - name: cargo test --locked
         run: cargo test --locked --all-features --all-targets
         env: # set this explicitly so integration tests will run
@@ -57,7 +59,9 @@ jobs:
         run: cargo update
       - name: Launch Faktory server
         if: hashFiles('Cargo.lock') != ''
-        run: make faktory
+        run: |
+          v=$(awk '/FROM contribsys\/faktory/ {print $2}' docker/faktory.Dockerfile | awk -F ':' 'NR==1{print $2}')
+          docker run -d -p 127.0.0.1:7419:7419 contribsys/faktory:${v} /faktory -b :7419
       - name: cargo test
         if: hashFiles('Cargo.lock') != ''
         run: cargo test --locked --all-features --all-targets
